<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<!-- =================== Project informations =================== -->
	<groupId>com.safetynet</groupId>
	<artifactId>safetynet-alerts</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>safetynet-alerts</name>
	<description>An application design to help emergency services interventions using centralized civilians data.</description>
	<developers>
		<developer>
			<name>Thibaut BEYLARD</name>
			<email>thibaut.beylard@lilo.org</email>
			<organization>SafetyNet</organization>
		</developer>
	</developers>


	<!-- =================== POM properties =================== -->
	<properties>
		<java.version>13</java.version>
		<tinylog.version>2.0.1</tinylog.version>
		<surefire.version>3.0.0-M4</surefire.version>
		<jacoco.version>0.8.5</jacoco.version>
	</properties>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.3.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<!-- ========================================================================== DEPENDENCIES -->
	<!-- ======================================================================================= -->
	<dependencies>
		<!-- =================== Spring related dependencies =================== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>


		<!-- =================== tinylog related dependencies =================== -->
		<dependency>
			<groupId>org.tinylog</groupId>
			<artifactId>tinylog-api</artifactId>
			<version>${tinylog.version}</version>
		</dependency>
		<dependency>
			<groupId>org.tinylog</groupId>
			<artifactId>tinylog-impl</artifactId>
			<version>${tinylog.version}</version>
		</dependency>

		<!-- =================== Tests related dependencies =================== -->
		<dependency>
			<groupId>org.jacoco</groupId>
			<artifactId>jacoco-maven-plugin</artifactId>
			<version>${jacoco.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>${surefire.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.14.0</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<!-- ================================================================================= BUILD -->
	<!-- ======================================================================================= -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<!-- =================== JaCoCo plugin executions =================== -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
							<goal>prepare-agent-integration</goal>
						</goals>
					</execution>
					<execution>
						<id>unit-tests-report</id>
						<goals>
							<goal>report</goal>
						</goals>
						<phase>test</phase>
                    </execution>
					<execution>
						<id>it-tests-report</id>
						<goals>
							<goal>report-integration</goal>
						</goals>
						<phase>integration-test</phase>
					</execution>
				</executions>
			</plugin>

			<!-- =================== Site plugin  =================== -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.7.1</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.doxia</groupId>
						<artifactId>doxia-site-renderer</artifactId>
						<version>1.9.1</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

	<!-- ============================================================================= REPORTING -->
	<!-- ======================================================================================= -->
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.0.0</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>summary</report>
							<report>team</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.0.0-M4</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.5</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>report</report>
							<report>report-integration</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

</project>
